--- a/www/index.html
+++ b/www/index.html
@@ -7,12 +7,14 @@
     <script src="components/loader.js"></script>
     <link rel="stylesheet" href="components/loader.css">
     <link rel="stylesheet" href="css/style.css">
+    <script type="text/javascript" src="components/motor.js"></script>
     <script>
     </script>
 </head>
-<body>
+<body onload="olamundo()">
+
 	<div class="page">
-        <form method="POST" class="formLogin">
+        <form class="formLogin">
             <h1>Login</h1>
             <p>Digite os seus dados de acesso no campo abaixo.</p>
             <label for="email">E-mail</label>
@@ -20,7 +22,7 @@
             <label for="password">Senha</label>
             <input type="password" placeholder="Digite seu e-mail" />
             <a href="/">Esqueci minha senha</a>
-            <input type="submit" value="Acessar" class="btn" />
+            <input type="submit" value="Acessar" class="btn" onclick="logar()"/>
             <p>Feito por: Conserta Felix e Chicken Little</p>
         </form>
     </div>
